--- a/test/index.html
+++ b/test/index.html
@@ -2,28 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>jquery keyTypeing</title>
+    <title>jquery keyTypingEvents</title>
+    <style>
+        body {
+            font-family: "DejaVu Sans",serif;
+            display: flex;
+            justify-content: center;
+        }
+        .container {
+            width: 1280px;
+            max-width: 1280px;
+            border-left: 1px solid grey;
+            border-right: 1px solid grey;
+            padding: 20px;
+        }
+
+        input {
+            padding: 6px;
+            border-radius: 4px;
+            border: 1px solid grey;
+        }
+
+        pre {
+            padding: 10px;
+            border-radius: 4px;
+            background-color: black;
+            color: white;
+            font-family: monospace;
+        }
+    </style>
 </head>
 <body>
-<input type="text" id="input_example_1">
+<div class="container">
+    <h1>Testpage for jquery typingEvents</h1>
+    <label for="input_example_1"></label><input type="text" id="input_example_1" autocomplete="off">
+    <pre>
+
+</pre>
+</div>
 <script src="../vendor/components/jquery/jquery.min.js"></script>
 <script src="../dist/jquery-typingEvents.min.js"></script>
 <script>
-    $('#input_example_1').typingEvents({
+    const input = $('#input_example_1');
+    input.typingEvents({
         // allowedKeys: ['a', 'A'],
         // preventedKeys: ['b', 'B'],
-        onKeyDown: (e, key) => {
-            console.log(key);
+        onKeyDown(e, key) {
+            $('<span>', {text: key, css: {display: 'block'}}).appendTo('pre');
         },
-        onKeyUp: (e, key) => {
-            console.log('keyup',key);
-        }, onPrevented: key => {
-            console.log(key + ' not allowed');
+        onKeyUp() {
+            // console.log('keyup',key);
         }
     })
-    $('#input_example_1').on('key.Shift', function(){
-        alert('Schift');
-    });
 </script>
 </body>
 </html>
